Fix issue with end of line not showing

--- a/website/custom/index/assets/css/progress.css
+++ b/website/custom/index/assets/css/progress.css
@@ -133,7 +133,7 @@ line {
 }
 
 .graph-line {
-    stroke-dasharray: 1000;
+    stroke-dasharray: 10000;
     stroke-dashoffset: 0;
 }
 
